k8s/kyverno-scripts/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-seccomp
spec:
  containers:
    - name: nginx
      image: nginx:1.27
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
